Fixed alignment.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ footer{
 .fa {
     padding: 50px;
     font-size: 50px;
-    width: 50px;
+
     text-align: center;
     text-decoration: none;
     color: white;
